make adjusts in swgger
