# routes/api.php
@@ -1,20 +1,20 @@
 <?php
+
 use App\Http\Controllers\AuthController;
-use APP\Http\Controllers\api\HomeController;
+use App\Http\Controllers\Api\HomeController; // Corrigido para "App"
 use Illuminate\Support\Facades\Route;
 
 Route::group(['middleware' => ['api']], function () {
-    Route::prefix('Auth')->group(function () {
+    Route::prefix('auth')->group(function () { // Mudou 'Auth' para 'auth'
         Route::post('/registeremployeer', [AuthController::class, 'createEmployer']);
+        Route::post('/teste', [AuthController::class, 'teste']);
         Route::post('/loginuser', [AuthController::class, 'loginUser']);
         Route::post('/loginemployer', [AuthController::class, 'loginEmployer']);
         Route::post('/register', [AuthController::class, 'createUser']);
     });
 });
 
-
-// rotas auth true
-
+// Rotas autenticadas (auth true)
 Route::middleware('jwt.check')->group(function () {
     Route::prefix('person')->group(function () {
         Route::get('/', [AuthController::class, 'show']);
@@ -22,11 +22,7 @@ Route::middleware('jwt.check')->group(function () {
     Route::prefix('raffle')->group(function () {
         Route::get('/', [AuthController::class, 'show']);
     });
-    Route::prefix('Users')->group(function () {
+    Route::prefix('users')->group(function () { // Mudou 'Users' para 'users'
         Route::get('/', [AuthController::class, 'show']);
     });
 });
-
-
-Route::get('/', [HomeController::class, 'index']);
-
